--- a/src/template.html
+++ b/src/template.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dishedbyQueency</title>
+    <title>E rain?</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div id="setting"></div>
+      <div id="day"></div>
+      <div id="search"></div>
+      <div id="menu"></div>
+    </header>
     <div id="content"></div>
     <footer>@7bmedia</footer>
     <!-- html-webpack-plugin will inject scripts here -->
